--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/napunapu/ekademo/issues"
   },
-  "homepage": "https://github.com/napunapu/ekademo#readme"
+  "homepage": "https://github.com/napunapu/ekademo#readme",
+  "dependencies": {
+    "express": "^4.13.4"
+  }
 }
